clusters/east-ga-atl-2301/imdb/imdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: imdb
  namespace: imdb
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: imdb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: imdb
  name: imdb
  namespace: imdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imdb
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: imdb
    spec:
      containers:
      - args:
        - --in-memory
        - --region
        - east
        - --zone
        - east-ga
        image: ghcr.io/cse-labs/imdb:1.0.0
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 5
          periodSeconds: 60
        name: app
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /readyz
            port: http
          initialDelaySeconds: 5
          periodSeconds: 60
        resources:
          limits:
            cpu: 1000m
            memory: 2048Mi
          requests:
            cpu: 500m
            memory: 1024Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
  name: imdb
  namespace: imdb
spec:
  rules:
  - host: east-ga-atl-2301.res-edge.com
    http:
      paths:
      - backend:
          service:
            name: imdb
            port:
              number: 8080
        path: /imdb
        pathType: Prefix
  tls:
  - hosts:
    - east-ga-atl-2301.res-edge.com
    secretName: imdb
